--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,8 +9,8 @@
     height: header-height
   .logo
     float: left
-    margin: 33px 30px 0 0
-  
+    margin: 20px 30px 33px 6px
+
 #header-outer
   height: 100%
   position: relative
